fix: dodane komentarze i drobna poprawka w wczytywaniu klucza